# tools

./: CMakeLists.txt  rum  vim.rar
libuv/lib/: libuv_vs2017_debug.lib
lua/include/: Makefile  lua
mysql/include/: my_config.h  mysql_version.h
protobuf/lib/: protoc.lib
redis/lib/: hiredis_debug.lib  hiredis_release.lib
redis/src/Win32_Interop/: Win32_Interop.vcxproj  win32_types_hiredis.h
redis/src/Win32_Interop/Win32/Debug/: Win32_Interop.idb
redis/src/Win32_Interop/Win32/Debug/Win32_Interop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Win32_Interop.lastbuildstate  custombuild.command.1.tlog
redis/src/Win32_Interop/Win32/Release/Win32_Interop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Win32_Interop.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
